--- a/java_demo/src/main/resources/application.properties
+++ b/java_demo/src/main/resources/application.properties
@@ -1,12 +1,25 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.show-sql=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=postgres
-#spring.datasource.password=admin
+spring.datasource.password=postgres
+#spring.datasource.password=
 
-spring.datasource.initialization-mode=always
-spring.datasource.initialize=true
+#spring.datasource.initialization-mode=always
+#spring.datasource.initialize=true
 #spring.datasource.schema=classpath:/schema.sql
-spring.datasource.continue-on-error=true
+#spring.datasource.continue-on-error=true
+
+
+
+##CUSTOM:
+# Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
+#Allows update:
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.h2.console.enabled=true
