--- a/java_demo/src/main/resources/application.properties
+++ b/java_demo/src/main/resources/application.properties
@@ -3,13 +3,14 @@
 #spring.jpa.hibernate.show-sql=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.jpa.hibernate.default_schema="demo_schema"
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
 #spring.datasource.password=
 
 #spring.datasource.initialization-mode=always
 #spring.datasource.initialize=true
-#spring.datasource.schema=classpath:/schema.sql
 #spring.datasource.continue-on-error=true
 
 
@@ -22,4 +23,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialec
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+
+#Timeout after 15m
+server.servlet.session.timeout=15m
+
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
+
