--- a/java_demo/src/main/resources/application.properties
+++ b/java_demo/src/main/resources/application.properties
@@ -27,6 +27,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Timeout after 15m
 server.servlet.session.timeout=15m
+#server.servlet.session.timeout=15
 
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
