--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,28 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - SpringBootApp",
+            "request": "launch",
+            "mainClass": "org.websparrow.SpringBootApp"
+        },
+        {
+            "type": "java",
             "name": "Spring Boot-ServingWebContentApplication<java_demo>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "mainClass": "com.lama_development.java_demo.ServingWebContentApplication",
             "projectName": "java_demo",
+            "args": ""
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-SpringBootApp<boot-security-jdbc>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "mainClass": "org.websparrow.SpringBootApp",
+            "projectName": "boot-security-jdbc",
             "args": ""
         }
     ]
